--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 Port=8080
 host=localhost
-port=5432
-user=postgres
-password=mysecretpassword
+port=5435
+user=cardapio_user
+password=cardapio_pass
 dbname=cardapio_db
 SECRET_KEY=hhheew566#4SW2!HJHgr
