Criado git ignore.

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-Port=8080
+HostPort=4040
 host=localhost
-port=5435
-user=cardapio_user
-password=cardapio_pass
-dbname=cardapio_db
+port=5430
+user=postgres
+password=pass
+dbname=mydatabase
 SECRET_KEY=hhheew566#4SW2!HJHgr
