--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 HostPort=4040
 host=localhost
-port=5432
+port=5430
 user=postgres
-password=pass
-dbname=cardapio_db
+password=pass 
+dbname=mydatabase
 
+ 
