--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 HostPort=4040
 host=localhost
-port=5430
+port=5432
 user=postgres
-password=pass 
-dbname=mydatabase
+password=pass
+dbname=cardapio_db
 
  
