--- a/.hintrc
+++ b/.hintrc
@@ -15,6 +15,14 @@
         "list": "off"
       }
     ],
-    "button-type": "off"
+    "button-type": "off",
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
+    ],
+    "meta-charset-utf-8": "off",
+    "meta-viewport": "off"
   }
 }
